--- a/index.html
+++ b/index.html
@@ -4,9 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Attendance Website</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     
+<!-- Start Login Section -->
+
+<section class="login-section">
+    <div class="card container mx-auto mt-5" style="max-width: 540px;">
+        <div class="text-center">
+            <img src="assets/image/national university  logo.png" alt="logo"  height="60px" width="50px" class="mt-2">
+            <h4 class="text-primary fw-bold mt-2">Welcome Back!!</h4>
+            <p class="text-muted">Login to access your account</p>
+            <hr>
+        </div>
+         <div class="card-body">
+            <form>
+                <div class="row ">
+                    <label for="inputuser" class="col-sm-2 col-form-label ">User ID</label>
+                    <input type="text" class="form-control" pattern="{a-zA-Z0-9}" id="inputuser" placeholder="Enter your User ID" required>
+                </div>
+                <div class="row mb-3">
+                    <label for="inputPassword3" class="col-form-label ">Password</label>
+                    <input type="password" class="form-control" id="inputPassword3" placeholder="Enter your password" required>
+                </div>
+                <div class="">
+                    <div class="row">
+                        <div class="col-6 ">
+                            <div class="row mb-3">
+                                <div class="col-sm-10 ">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="gridCheck1" required>
+                                        <label class="form-check-label" for="gridCheck1">
+                                            Remember Me
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="row mb-3">
+                                <div class="col-sm-10 offset-sm-4">
+                                    <div class="form-check">
+                                        <label class="form-check-label" for="gridCheck1">
+                                        <a href="" class="text-decoration-none">Forget Password</a>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Log in</button>
+            </form>
+        </div>
+        <div class="text-center mt-3">
+            <h4>Or Login With</h4>
+            <div class="login-icon mt-3">
+               <a href="" class="border border-dark rounded-circle "><i class="fa-brands fa-facebook"></i></a> 
+               <a href="" class="border border-dark rounded-circle"><i class="fa-solid fa-envelope"></i></a>
+               <a href="" class="border border-dark rounded-circle"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+        <div class="text-center mt-4">
+            <p class="fs-6"> Don't have an account <a href="" class="text-decoration-none">Create One</a></p>
+        </div>
+    </div>
+</section>
+
+
+<!-- End Login Section -->
+    <script src="assets/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 </html>
