--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
             </div>
         </div>
         <div class="text-center mt-4">
-            <p class="fs-6"> Don't have an account <a href="" class="text-decoration-none">Create One</a></p>
+            <p class="fs-6"> Don't have an account <a href="signup.html" class="text-decoration-none">Create One</a></p>
         </div>
     </div>
 </section>
 
 
 <!-- End Login Section -->
+
     <script src="assets/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 </html>
