--- a/dashboard.html
+++ b/dashboard.html
@@ -92,6 +92,7 @@
                                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
                                     <div class="accordion-body">
                                        COURSE DETAILS
+                                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, neque?
                                     </div>
                                 </div>
                             </div>
