--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Log in</button>
+                <button type="submit" class="btn btn-primary"><a href="dashboard.html" class="text-decoration-none text-light">Log in</a></button>
             </form>
         </div>
         <div class="text-center mt-3">
